# C-code-implementation-of-Auto-Directed-Video-Stabilization-with-Robust-L1-Optimal-Camera-Paths

./: CMakeLists.txt  LICENSE  README.md  videostab.cpp  videostab.h
